force-app/main/default/objects/Replaced_Item__c/Replaced_Item__c.object-meta.xml
<CustomObject>
    <label>Replaced Item</label>
    <nameField>
        <label>Replaced Item Name (Damged Item)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Replaced Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>