force-app/main/default/objects/Replaced_Item__c/fields/Damaged_Stock__c.field-meta.xml
<CustomField>
    <fullName>Damaged_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Damaged Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Replaced Items</relationshipLabel>
    <relationshipName>Replaced_Items</relationshipName>
    <type>Lookup</type>
</CustomField>