force-app/main/default/objects/Replaced_Item__c/fields/Item_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Item_Replacement__c</fullName>
    <label>Item Replacement</label>
    <referenceTo>Item_Replacement__c</referenceTo>
    <relationshipLabel>Replaced Items</relationshipLabel>
    <relationshipName>Replaced_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>