force-app/main/default/objects/Replaced_Item__c/fields/N_Batch_No__c.field-meta.xml
<CustomField>
    <fullName>N_Batch_No__c</fullName>
    <formula>New_Stock__r.Batch_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_Batch_No</label>
    <type>Text</type>
</CustomField>