force-app/main/default/objects/Replaced_Item__c/fields/N_Item_Code__c.field-meta.xml
<CustomField>
    <fullName>N_Item_Code__c</fullName>
    <formula>New_Stock__r.Product__r.Product_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_Item_Code</label>
    <type>Text</type>
</CustomField>