force-app/main/default/objects/Replaced_Item__c/fields/N_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>N_Item_Name__c</fullName>
    <formula>New_Stock__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N_Item_Name(Fresh stock)</label>
    <type>Text</type>
</CustomField>