force-app/main/default/objects/Replaced_Item__c/fields/New_Created_Stock__c.field-meta.xml
<CustomField>
    <fullName>New_Created_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Created Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Replaced Items (New Created Stock)</relationshipLabel>
    <relationshipName>Replaced_Items2</relationshipName>
    <type>Lookup</type>
</CustomField>