force-app/main/default/objects/Replaced_Item__c/fields/New_Stock__c.field-meta.xml
<CustomField>
    <fullName>New_Stock__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Replaced Items (New Stock)</relationshipLabel>
    <relationshipName>Replaced_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>