force-app/main/default/objects/Replaced_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Replaced Items</relationshipLabel>
    <relationshipName>Replaced_Items</relationshipName>
    <type>Lookup</type>
</CustomField>