force-app/main/default/objects/Replaced_Item__c/fields/R_Type__c.field-meta.xml
<CustomField>
    <fullName>R_Type__c</fullName>
    <formula>text(Item_Replacement__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>R_Type</label>
    <type>Text</type>
</CustomField>