force-app/main/default/objects/Replaced_Item__c/fields/Replaced_Product__c.field-meta.xml
<CustomField>
    <fullName>Replaced_Product__c</fullName>
    <formula>New_Stock__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Replaced Product</label>
    <type>Text</type>
</CustomField>