force-app/main/default/objects/Replaced_Item__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <formula>Item_Replacement__r.Route__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route</label>
    <type>Text</type>
</CustomField>