force-app/main/default/objects/Replaced_Item__c/fields/RouteLKP__c.field-meta.xml
<CustomField>
    <fullName>RouteLKP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Replaced Items</relationshipLabel>
    <relationshipName>Replaced_Items</relationshipName>
    <type>Lookup</type>
</CustomField>