force-app/main/default/objects/Replaced_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Non-Saleable</fullName>
                <isActive>false</isActive>
                <label>Non-Saleable</label>
            </value>
            <value>
                <fullName>Saleable</fullName>
                <isActive>false</isActive>
                <label>Saleable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>